# ThinIce

./: .gitignore  README.md  pyproject.toml
thinice/: main.py  mainapi.py  thinice.py
thinice/cli/: app.py  debug.py  delete.py  download.py  inventory.py  jobs.py  list.py  main.py  upload.py  vaults.py
thinice/core/: credentials.py  exceptions.py  inventory.py  locations.py  utils.py  vault.py
thinice/core/rawglacier/: __init__.py  multipart.py
